# snowflake

./: .gitignore  CMakeLists.txt  README.md
snowflake/: CMakeLists.txt
snowflake/src/: color.h  defines.h  logger.cpp  platform.h  platform_linux.cpp  platform_win32.cpp  sassert.h  simage_loader.cpp  simage_loader.h  smath.h  smemory.cpp  smemory.h  snowflake.cpp  snowflake.h  srenderer.cpp  srenderer.h  srenderer_internal.cpp  srenderer_internal.h  stext.cpp  stext.h  swindow.cpp  swindow.h  texture.cpp  texture.h  utils.cpp  utils.h
snowflake/src/core/: defines.h  logger.cpp  logger.h  smemory.cpp  swindow.cpp  swindow.h
snowflake/src/math/: smath.h
snowflake/src/platform/: platform.h  platform_linux.cpp  platform_win32.cpp
snowflake/src/renderer/: color.h  shapes.cpp  shapes.h  simage_loader.cpp  simage_loader.h  srenderer.cpp  srenderer.h  srenderer_internal.cpp  srenderer_internal.h  stext.cpp  stext.h  texture.cpp  texture.h
snowflake/src/utils/: utils.cpp  utils.h
snowflake_testbed/: CMakeLists.txt
snowflake_testbed/src/: main.cpp
snowflake_testbed/tests/: tests.cpp
